--- a/MumbaiHacks-client/.env.development
+++ b/MumbaiHacks-client/.env.development
@@ -1,2 +1,3 @@
 VITE_SERVER_URL=http://SERVERURL:PORT
 VITE_CLIENT_URL=http://localhost:5173
+VITE_GOOGLE_API_KEY=AIzaSyDR2qWdRiKg92wPWeqHflabXuKbw-k6m0k
