--- a/MumbaiHacks-client/package.json
+++ b/MumbaiHacks-client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-react": "^4.2.1",
@@ -32,7 +33,8 @@
     "react-router-dom": "^6.22.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uitemplate": "file:"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
