--- a/MumbaiHacks-client/package.json
+++ b/MumbaiHacks-client/package.json
@@ -19,10 +19,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-react": "^4.2.1",
-    "axios": "^1.6.8",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.376.0",
     "mini-svg-data-uri": "^1.4.4",
@@ -38,6 +39,7 @@
     "uitemplate": "file:"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
