--- a/MumbaiHacks-client/.env.development
+++ b/MumbaiHacks-client/.env.development
@@ -1,4 +1,4 @@
-VITE_SERVER_URL=http://SERVERURL:PORT
+VITE_SERVER_URL=http://SERVERURL:3000
 VITE_CLIENT_URL=http://localhost:5173
 VITE_GOOGLE_API_KEY=AIzaSyDR2qWdRiKg92wPWeqHflabXuKbw-k6m0k
 VITE_TELEGRAM_BOT_TOKEN=7962210133:AAHhzogAtjTC3X9mBMFSW0cl7TdU19XHhv4
