--- a/MumbaiHacks-client/package.json
+++ b/MumbaiHacks-client/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
