--- a/MumbaiHacks-server/package.json
+++ b/MumbaiHacks-server/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "calendar": "^0.1.1",
     "chai": "^5.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -55,6 +56,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
+    "popover": "^2.4.1",
     "react-customizable-progressbar": "^1.2.0",
     "servercode": "file:",
     "ts-node": "^10.9.1",
