--- a/MumbaiHacks-server/package.json
+++ b/MumbaiHacks-server/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/json2csv": "^5.0.7",
     "@types/lodash": "^4.14.202",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.12",
@@ -43,6 +44,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
